--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #151923;
+}
+body::-webkit-scrollbar-track {
+  background-color: #424242;
+}
+body::-webkit-scrollbar {
+  background-color: #686868;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #555;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#offcanvasNavbarDropdown-expand-lg{
+  color: white !important;
+}
+.content{
+  background-color: #151923;
+  width: 100%;
+  height: 100%;
+  color: white; 
+}
+.content .container{
+  padding: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
